--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,38 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-family: 'Nunito Sans', sans-serif;
     --color-orange-light: #ffedd5;
     --color-gray: #d6d3d1;
     --color-orange-bright: #f97316;
     --color-gray-dark: #44403c;
+    ---offset: 20px;
 }
 
 .home {
     background-image: url("landing-materials/hero.jpg");
+    width: 100%;
     height: 800px;
     background-position: center top;
     background-size: cover;
+    position: relative;
 }
 
+.opacity {
+    position: absolute;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.539);
+}
 .section {
     max-width: 1024px;
     width: 100%;
     margin: auto;
+    padding: 0 20px;
 }
 
-#header_logo {
+#header_logo { 
     width: 100px;
     height: 100px;
 }
@@ -29,12 +42,12 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 a {
     margin-left: 15px;
     margin-right: 15px;
-    text-decoration: none;
     color: var(--color-gray-dark);
 }
 
@@ -56,6 +69,9 @@ a:hover {
     font-weight: 500;
     max-width: 50%;
     margin-top: 100px;
+}
+
+.margin-bottom-detail {
     margin-bottom: 50px;
 }
 
@@ -67,16 +83,17 @@ a:hover {
 
 .home_text {
     max-width: 40%;
-    margin-bottom: 50px;
 }
 
 .button {
     background-color: var(--color-orange-bright);
     color: #fafaf9;
-    padding: 15px 30px 15px 30px;
+    padding: 15px 30px;
     font-size: 20px;
     border: 1px solid var(--color-orange-bright);
     border-radius: 10px;
+    transition: 1s;
+    cursor: pointer;
 }
 
 .button:hover {
@@ -94,6 +111,7 @@ a:hover {
     margin: 10px;
     text-align: center;
     border-radius: 7px;
+    width: calc(100% / 6 * 2 - var(---offset));
 }
 
 .title {
@@ -131,12 +149,16 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     margin-top: 50px;
-    margin-bottom: 50px;
+}
+
+.main-task_content {
+    width: calc(100% / 6 * 3 - var(---offset));
 }
 
 #main-task_image {
-    width: 500px;
+    width: calc(100% / 6 * 3 - var(---offset));
     height: 400px;
     object-fit: contain;
 }
@@ -182,6 +204,7 @@ a:hover {
     border-radius: 10px;
     font-size: 20px;
     outline: none;
+    width: calc(100% / 6 * 2 - var(---offset));
 }
 
 .reviews {
@@ -190,7 +213,6 @@ a:hover {
     flex-direction: column;
     justify-content: center;
     padding-bottom: 100px;
-
 }
 
 .review_name {
@@ -225,7 +247,7 @@ a:hover {
     border-radius: 10px;
     padding: 10px;
     margin: 15px;
-    width: 30%;
+    width: calc(100% / 6 * 2 - var(---offset));
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -268,6 +290,8 @@ a:hover {
     padding: 10px 20px;
     margin-top: 20px;
     width: 100%;
+    cursor: pointer;
+    transition: 1s;
 }
 
 .tariff-button:hover {
@@ -287,7 +311,6 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-
 }
 
 .phone {
@@ -300,4 +323,99 @@ a:hover {
 
 .footer-icon {
     font-size: 24px;
+}
+
+@media (max-width: 600px) {
+    .home_title {
+        font-size: 48px;
+        font-weight: 500;
+    }
+
+    .title {
+        font-size: 40px;
+        font-weight: 500;
+    }
+
+    .button {
+        width: calc(100% / 6 * 6 - var(---offset));
+    }
+
+    .profits {
+        flex-direction: column;
+    }
+
+    .profit {
+        width: calc(100% / 6 * 6 - var(---offset));
+    }
+
+    .main-task_content {
+        width: calc(100% / 6 * 6 - var(---offset));
+    }
+
+    .main-task_text {
+        text-align: justify;
+    }
+
+    #main-task_image {
+        width: calc(100% / 6 * 6 - var(---offset));
+    }
+
+    .registration_form {
+        flex-direction: column;
+    }
+   
+    .registration_text {
+        text-align: center;
+        padding-top: var(---offset);
+    }
+
+    .registration_form_input {
+        width: calc(100% / 6 * 6 - var(---offset));
+        margin-bottom: var(---offset);
+    }
+
+    .review {
+        width: calc(100% / 6 * 6 - var(---offset));
+        max-width: none;
+    }
+
+    .subscription-section {
+        flex-direction: column;
+    }
+
+    .tariff {
+        width: calc(100% / 6 * 6 - var(---offset));
+    }
+
+    .contact-information {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .phone {
+        padding-bottom: var(---offset);
+    }
+    
+    .footer-icon {
+        padding-bottom: var(---offset);
+    }
+}
+
+@media (max-width: 390px) {
+    .home {
+        height: 900px;
+    }
+}
+
+@media (max-width: 350px) {
+    #header_logo { 
+        width: 90px;
+        height: 90px;
+    }
+
+    a {
+        margin: 0 10px;
+    }
 }
